# Event-Management

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
event_management/event_management/: settings.py  urls.py
event_management/events/: models.py  serializers.py  views.py
event_management/events/migrations/: 0001_initial.py  0002_registration.py
